Fixed bug #70066

If we fall back to emulated prepared statements, destroy S->stmt,
so the code doesn't get confused about which mode we're in.